syntax = "proto3";
package network;

// this could also include attributes
message Network {
  repeated Node nodes = 1;
  repeated Link links = 2;
  float effectiveCellSize = 3;
}

message Node {
  string id = 1;
  double x = 2;
  double y = 3;
  uint32 partition = 4;
  uint32 cmpWeight = 5;
}

message Link {
  string id = 1;
  string from = 2;
  string to = 3;
  double length = 4;
  float capacity = 5;
  float freespeed = 6;
  float permlanes = 7;
  repeated string modes = 8;
  uint32 partition = 9;
}